--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>orders under 50$ = +10$ shipping.</p>
     <p>orders over 50$ = free shipping.</p>
 
-    <input class="js-the-amount input" type="number" min="0" max="10000" placeholder="cost of order"> 
+    <input class="js-the-amount input" type="number" min="0" placeholder="cost of order"> 
     <button class="logic-btn style-btn">calculate</button>
     <button class="remove-btn style-btn">remove</button>
 
@@ -19,4 +19,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
